Fix ellipsis for the player title on small displays

--- a/assets/stylesheets/components/player.scss
+++ b/assets/stylesheets/components/player.scss
@@ -60,6 +60,7 @@
     flex-wrap: wrap;
     gap: $gap;
     justify-content: center;
+    min-width: 0;
     text-align: center;
 
     .player-title {
